--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,8 @@
 {
   "extends": "expo/tsconfig.base",
+  "parserOptions": {
+    "project": "./tsconfig.json"
+  },
   "compilerOptions": {
     "strict": true,
     "noImplicitAny": false, 
