--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     }
   },
   "dependencies": {
+    "@react-navigation/native": "^6.0.6",
+    "@react-navigation/stack": "^6.0.11",
     "expo": "~44.0.0",
     "expo-font": "~10.0.4",
     "expo-status-bar": "~1.2.0",
@@ -32,6 +34,8 @@
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
     "react-native-exception-handler": "^2.10.10",
+    "react-native-gesture-handler": "~2.1.0",
+    "react-native-safe-area-context": "3.3.2",
     "react-native-web": "0.17.1"
   },
   "devDependencies": {
