--- a/package.json
+++ b/package.json
@@ -33,8 +33,10 @@
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
+    "react-native-animatable": "^1.3.3",
     "react-native-exception-handler": "^2.10.10",
     "react-native-gesture-handler": "~2.1.0",
+    "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "3.3.2",
     "react-native-web": "0.17.1"
   },
