--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,7 @@
     "project": "./tsconfig.json"
   },
   "compilerOptions": {
+    "jsx": "react",
     "strict": true,
     "noImplicitAny": false, 
     "esModuleInterop": true, 
